# raspberry-pico-tetris

./: .gitmodules  CMakeLists.txt  README.md
footage/: tetris_wiring.fzz
src/: component_renderer_mapping.c  component_renderer_mapping.h  main.c  parameter.h
src/core/: abstract_component.c  abstract_component.h  playground_32_16.c  playground_32_16.h
src/predefined_object/: falling_piece.c  falling_piece.h  tetris_image.c  tetris_image.h
src/renderer/: ssd1306_128_64_spi_renderer.c  ssd1306_128_64_spi_renderer.h
